--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <h2>a better way to camp</h2>
                     </div>
                     <div class="col col-md-4 col-xl-2 mt-4">
-                        <button class="btn btn-info btn-lg text-white text-nowrap" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</button>
+                        <button class="btn btn-info btn-lg text-white text-nowrap" id="reserveButton">Reserve Campsite</button>
                     </div>
                 </div>
             </div>
@@ -45,7 +45,7 @@
         <div class="modal fade" id="reserveModal" role="dialog" tabindex="0">
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
-                    <div class="modal-header bg-info text-white">
+                    <div class="modal-header">
                         <h3 class="modal-title">Reserve a Campsite</h3>
                         <button class="close" data-dismiss="modal">&times;</button>
                     </div>
@@ -116,7 +116,7 @@
                         </li>
                     </ul>
                     <span class="navbar-text ml-auto">
-                        <a role="button" data-toggle="modal" data-target="#loginModal" id="loginButton"><i class="fa fa-sign-in"> Login</i></a>
+                        <a role="button" data-toggle="modal" id="loginButton"><i class="fa fa-sign-in"> Login</i></a>
                     </span>
                 </div>
             </div>
